@@ -221,7 +221,7 @@
     <copydir src="${dist}" dest="${build}/${archive}"
              includes="${archive}.jar,${archive}-xml.jar" />
     <copydir src="${lib}" dest="${build}/${archive}"
-             includes="jdbc-se2.0.jar,jndi.jar,jta1.0.1.jar,xerces.jar,ldapjdk.jar" />
+             includes="jdbc-se2.0.jar,jndi.jar,jta1.0.1.jar,xerces.jar,ldapjdk.jar,xslp.jar" />
     <copydir src="${schema}" dest="${build}/${archive}/schema" />
     <copydir src="${build}/doc" dest="${build}/${archive}/doc" />
     <deltree dir="${build}/${archive}/doc/javadoc" />
